tests/ui/consts/control-flow/assert.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/assert.rs:5:15
   |
LL | const _: () = assert!(false);
   |               ^^^^^^^^^^^^^^ evaluation panicked: assertion failed: false
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
